# dogoap

./: Cargo.toml
crates/bevy_dogoap/: Cargo.toml
crates/bevy_dogoap/examples/: cells.rs  miner.rs  resman.rs
crates/bevy_dogoap/src/: macros.rs  planner.rs  prelude.rs  traits.rs
crates/dogoap/: Cargo.toml
crates/dogoap/benches/: long_plan.rs
crates/dogoap/examples/: basic.rs  long_plan.rs  simple.rs
crates/dogoap/src/: action.rs  compare.rs  planner.rs  prelude.rs  simple.rs
crates/dogoap/tests/: tests.rs
crates/dogoap_macros/src/: lib.rs
