[package]
name = "bevy_dogoap"
version = "0.3.0"
edition = "2021"
description = "bevy_dogoap"
license = "MIT"
homepage = "https://github.com/victorb/dogoap"

[features]
default = ["compute-pool"]
compute-pool = []

[dependencies]
bevy = { version = "0.15.0-rc.2", default-features = false, optional = false, features = ["wayland", "bevy_gizmos", "bevy_text", "multi_threaded", "default_font", "webgl2"]}
bevy-trait-query = { git = "https://github.com/JoJoJet/bevy-trait-query", branch = "bevy-0.15-rc" }
dogoap = { path = "../dogoap", version = "0.3.0"}
dogoap_macros = { path = "../dogoap_macros", version = "0.3.0"}
rand = "0.8.5"
